--- a/src/Calabonga.Microservices.Tracker/Calabonga.Microservices.Tracker.csproj
+++ b/src/Calabonga.Microservices.Tracker/Calabonga.Microservices.Tracker.csproj
@@ -3,14 +3,14 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.1;netcoreapp3.1</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.0.0</Version>
+    <Version>1.0.1-beta1</Version>
     <Authors>Calabonga</Authors>
     <Company>Calabonga SOFT</Company>
     <Copyright>Calabonga SOFT © 2020-2021</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIcon>logo.png</PackageIcon>
     <PackageTags>calabonga correlationid traceid microservices request response handler httpclient cross-service communications</PackageTags>
-    <PackageReleaseNotes>First release</PackageReleaseNotes>
+    <PackageReleaseNotes>First release after moving to own repository</PackageReleaseNotes>
     <Description>Library helps to generate a trace ID string for the cross-microservice communication. https://www.calabonga.net/blog/post/tracking-correlationid-between-microservices-asp-net-core</Description>
   </PropertyGroup>
 
