--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       run: dotnet build src/Calabonga.Microservices.Tracker/Calabonga.Microservices.Tracker.csproj --configuration Release --no-restore --output ${{env.DOTNET_ROOT}}/Package
 
     - name: Pack NuGet package
-      run: dotnet pack src/Calabonga.Microservices.Tracker/Calabonga.Microservices.Tracker.csproj --configuration Release --output ${{env.DOTNET_ROOT}}/Package
+      run: dotnet pack src/Calabonga.Microservices.Tracker/Calabonga.Microservices.Tracker.csproj --configuration Release --output ${{env.DOTNET_ROOT}}/Package --source https://api.nuget.org/v3/index.json
     
     - name: Publish Calabonga.Microservices.Tracker
       run: dotnet nuget push ${{env.DOTNET_ROOT}}/Package/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
