--- a/src/Calabonga.Microservices.Tracker/Calabonga.Microservices.Tracker.csproj
+++ b/src/Calabonga.Microservices.Tracker/Calabonga.Microservices.Tracker.csproj
@@ -2,10 +2,10 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.1</TargetFramework>
-		<Version>4.0.0</Version>
+		<Version>4.0.1</Version>
 		<Authors>Calabonga</Authors>
 		<Company>Calabonga SOFT</Company>
-		<Copyright>Calabonga SOFT © 2020-2023</Copyright>
+		<Copyright>Calabonga SOFT © 2020-$([System.DateTime]::Now.ToString(yyyy))</Copyright>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageIcon>logo.png</PackageIcon>
 		<PackageTags>calabonga correlationid traceid microservices request response handler httpclient cross-service communications</PackageTags>
