--- a/src/Calabonga.microservices.Tracker.Demo/appsettings.Development.json
+++ b/src/Calabonga.microservices.Tracker.Demo/appsettings.Development.json
@@ -3,7 +3,8 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Calabonga.Microservices.Tracker.TrackerMiddleware": "Trace"
     }
   },
   "MassTransit": {
